agregar > p hijos del footer

--- a/ejercicio-selectores/index.html
+++ b/ejercicio-selectores/index.html
@@ -23,7 +23,7 @@
 
         /**--------- los p hijos del footer con fondo amarillo ---------*/
 
-        footer p {
+        footer > p {
             background-color: yellow;
         }
 
@@ -32,7 +32,7 @@
         p:nth-of-type(even) {
             text-transform: uppercase;
         }
-        
+
     </style>
 </head>
 
