1ra pregunta de regla CSS

--- a/ejercicio-teoria-y-flex/index.html
+++ b/ejercicio-teoria-y-flex/index.html
@@ -36,9 +36,9 @@
         <h2>Dada esta regla CSS</h2>
         <img src="cssrule.png" alt="">
         <ol>
-            <li>¿Qué tipo de selector CSS es? <span>Respuesta: Es un selector de...<del>id</del> </span></li>
-            <li>¿Cuantas propiedades CSS establece este selector? <span>Respuesta:</span></li>
-            <li>¿Cuál es el valor de la segunda propiedad? <span>Respuesta:</span></li>
+            <li>¿Qué tipo de selector CSS es? <span>Respuesta: Es un selector de... clase</span></li>
+            <li>¿Cuantas propiedades CSS establece este selector? <span>Respuesta: dos propiedades color y tamaño de la fuente. La primera es color del texto gris y la segunda es el tamaño de la fuente en 18px </span></li>
+            <li>¿Cuál es el valor de la segunda propiedad? <span>Respuesta: el valor de la segunda propiedad es de 18px</span></li>
         </ol>
         <h2>Analiza el siguiente tag img</h2>
         <img src="tagimg.png" alt="">
