--- a/ejercicio-teoria-y-flex/index.html
+++ b/ejercicio-teoria-y-flex/index.html
@@ -37,17 +37,21 @@
         <img src="cssrule.png" alt="">
         <ol>
             <li>¿Qué tipo de selector CSS es? <span>Respuesta: Es un selector de... clase</span></li>
-            <li>¿Cuantas propiedades CSS establece este selector? <span>Respuesta: dos propiedades color y tamaño de la fuente. La primera es color del texto gris y la segunda es el tamaño de la fuente en 18px </span></li>
-            <li>¿Cuál es el valor de la segunda propiedad? <span>Respuesta: el valor de la segunda propiedad es de 18px</span></li>
+            <li>¿Cuantas propiedades CSS establece este selector? <span>Respuesta: dos propiedades color y tamaño de la
+                    fuente. La primera es color del texto gris y la segunda es el tamaño de la fuente en 18px </span>
+            </li>
+            <li>¿Cuál es el valor de la segunda propiedad? <span>Respuesta: el valor de la segunda propiedad es de
+                    18px</span></li>
         </ol>
         <h2>Analiza el siguiente tag img</h2>
         <img src="tagimg.png" alt="">
         <ol>
-            <li>¿Cuantos atributos tiene este tag? <span>Respuesta:</span></li>
-            <li>¿Cuál es el valor del atributo <i>src</i>? <span>Respuesta:</span></li>
+            <li>¿Cuantos atributos tiene este tag? <span>Respuesta: tres atributos: "src", "alt" y "style"</span></li>
+            <li>¿Cuál es el valor del atributo <i>src</i>? <span>Respuesta: "/w3images/team2.jpg" </span></li>
             <li>Imagina que tenemos la siguiente reglas CSS. ¿Crees que el tamaño de la imagen sería de 1000px? ¿Por
                 qué? <img src="big-image.png" alt=""> </li>
-            <p><span>Respuesta:</span></p>
+            <p><span>Respuesta:No, necesariamente porque estamos hablando de 100% y no un valor especifico de 1000px. A menos que el tamaño
+                    del padre es 1000px, y la img se extienda en un 100%, no tendra un tamaño de 1000px</span></p>
         </ol>
         <h2>¿Cuál es el valor de la propiedad <i>font-weight</i> de este botón?</h2>
         <button type="button" onclick="alert('Hello world!')">Click Me!</button>
