--- a/ejercicio-teoria-y-flex/index.html
+++ b/ejercicio-teoria-y-flex/index.html
@@ -14,15 +14,29 @@
         .dice {
             display: flex;
             border: 1px solid black;
-            width: 300px;
+            width: 100px;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            height: 100px;
+            padding: 10px;
+        }
+
+        .dice > div:nth-child(1){
+            align-self: flex-start;
         }
 
         .dice>div {
-            width: 50px;
-            height: 50px;
+            width: 20px;
+            height: 20px;
             border-radius: 50%;
             background-color: black;
         }
+
+        .dice > div:nth-child(2) {
+            align-self: flex-end;
+        }
+        
     </style>
 
 </head>
@@ -50,12 +64,12 @@
             <li>¿Cuál es el valor del atributo <i>src</i>? <span>Respuesta: "/w3images/team2.jpg" </span></li>
             <li>Imagina que tenemos la siguiente reglas CSS. ¿Crees que el tamaño de la imagen sería de 1000px? ¿Por
                 qué? <img src="big-image.png" alt=""> </li>
-            <p><span>Respuesta:No, necesariamente porque estamos hablando de 100% y no un valor especifico de 1000px. A menos que el tamaño
+            <p><span>Respuesta: No, necesariamente porque estamos hablando de 100% y no un valor especifico de 1000px. A menos que el tamaño
                     del padre es 1000px, y la img se extienda en un 100%, no tendra un tamaño de 1000px</span></p>
         </ol>
         <h2>¿Cuál es el valor de la propiedad <i>font-weight</i> de este botón?</h2>
         <button type="button" onclick="alert('Hello world!')">Click Me!</button>
-        <p><span>Respuesta: </span></p>
+        <p><span>Respuesta: 400</span></p>
     </div>
     <div class="container">
         <h2>Crea un dado que muestre la cara del "dos" usando flex adecuadamente.</h2>
@@ -63,6 +77,7 @@
             propiedaes CSS de forma
             adecuada al selector .dice para conseguirlo</p>
         <div class="dice">
+    
             <div></div>
             <div></div>
         </div>
