last revision through nuhtml

--- a/ejercicio-teoria-y-flex/index.html
+++ b/ejercicio-teoria-y-flex/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
     <style>
         span {
             font-weight: 700;
@@ -29,14 +29,13 @@
             background-color: black;
         }
 
-        .dice > div:nth-child(1) {
+        .dice>div:nth-child(1) {
             align-self: flex-start;
         }
 
-        .dice > div:nth-child(2) {
+        .dice>div:nth-child(2) {
             align-self: flex-end;
         }
-        
     </style>
 
 </head>
@@ -63,9 +62,9 @@
             <li>¿Cuantos atributos tiene este tag? <span>Respuesta: tres atributos: "src", "alt" y "style"</span></li>
             <li>¿Cuál es el valor del atributo <i>src</i>? <span>Respuesta: "/w3images/team2.jpg" </span></li>
             <li>Imagina que tenemos la siguiente reglas CSS. ¿Crees que el tamaño de la imagen sería de 1000px? ¿Por
-                qué? <img src="big-image.png" alt=""> </li>
-            <p><span>Respuesta: No, necesariamente porque estamos hablando de 100% y no un valor especifico de 1000px. A menos que el tamaño
-                    del padre es 1000px, y la img se extienda en un 100%, no tendra un tamaño de 1000px</span></p>
+                qué? <img src="big-image.png" alt=""> 
+            <span>Respuesta: No, necesariamente porque estamos hablando de 100% y no un valor especifico de 1000px. A menos que el tamaño del padre es 1000px, y la img se extienda en un 100%, no tendra un tamaño de 1000px</span>
+            </li>
         </ol>
         <h2>¿Cuál es el valor de la propiedad <i>font-weight</i> de este botón?</h2>
         <button type="button" onclick="alert('Hello world!')">Click Me!</button>
@@ -77,7 +76,7 @@
             propiedaes CSS de forma
             adecuada al selector .dice para conseguirlo</p>
         <div class="dice">
-    
+
             <div></div>
             <div></div>
         </div>
