--- a/ejercicio-semantica/index.html
+++ b/ejercicio-semantica/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
+    <title>Ejercicio de Semantica</title>
     <style>
         body {
             font-family: Arial, sans-serif;
