passed through nuhtml

--- a/ejercicio-semantica/index.html
+++ b/ejercicio-semantica/index.html
@@ -144,48 +144,19 @@
             </div>
             <div class="collapsabile">
                 <div class="teaser-text">Nuevas restricciones de viaje</div>
-                <p>El gobierno anuncia nuevas restricciones de viaje debido al aumento de casos de COVID-19 en todo el país, afectando a millones de personas que planeaban vacaciones.</p>
+                <p>El gobierno anuncia nuevas restricciones de viaje debido al aumento de casos de COVID-19 en todo el
+                    país, afectando a millones de personas que planeaban vacaciones.</p>
             </div>
             <div class="collapsabile">
                 <div class="teaser-text">Lanzamiento de un nuevo satélite</div>
-                <p>Una empresa espacial lanza con éxito un nuevo satélite de comunicaciones que proporcionará cobertura mejorada en áreas remotas y rurales.</p>
+                <p>Una empresa espacial lanza con éxito un nuevo satélite de comunicaciones que proporcionará cobertura
+                    mejorada en áreas remotas y rurales.</p>
             </div>
         </aside>
-        </article>
-        </div>
-        <footer class="page-bottom">
-            <span class="legal">Copyright 2024, New York Times</span>
-        </footer>
-</body>
-
-</html>
-</section>
-</article>
-<div class="other-news">
-    <h2>También en las noticias</h2>
-    <div class="collapsabile">
-        <div class="teaser-text">Desfile del Día de la Independencia</div>
-        <p>Miles de personas se reunieron en las calles de la ciudad para celebrar el Día de la
-            Independencia
-            con un colorido desfile y eventos festivos.</p>
-    </div>
-    <div class="collapsabile">
-        <div class="teaser-text">Nuevas restricciones de viaje</div>
-        <p>El gobierno anuncia nuevas restricciones de viaje debido al aumento de casos de COVID-19 en todo
-            el
-            país, afectando a millones de personas que planeaban vacaciones.</p>
-    </div>
-    <div class="collapsabile">
-        <div class="teaser-text">Lanzamiento de un nuevo satélite</div>
-        <p>Una empresa espacial lanza con éxito un nuevo satélite de comunicaciones que proporcionará
-            cobertura
-            mejorada en áreas remotas y rurales.</p>
-    </div>
-</div>
-</div>
-<div class="page-bottom">
-    <span class="legal">Copyright 2024, New York Times</span>
-</div>
+    </main>
+    <footer class="page-bottom">
+        <p><span class="legal">Copyright 2024, New York Times</span></p>
+    </footer>
 </body>
 
 </html>
