--- a/ejercicio-formulario/index.html
+++ b/ejercicio-formulario/index.html
@@ -31,8 +31,18 @@
         <h2>Completa el formulario</h2>
         <form action="#" method="" class="form" id="shirt-form">
             <div class="form-group">
-                <label for="words">Texto (máximo 10 caracteres):</label>
-                <input type="text" id="words" name="words" required>
+                <label for="words">Texto (máximo 15 caracteres):</label>
+                <input type="text" id="words" name="words" maxlength="15" required>
+            </div>
+
+            <!-- Selector de talla S, M , L -- -->
+            <div class="form-group">
+                <label for="size"> Color preferido </label>
+                <select id="size" name="size">
+                    <option value="small">S</option>
+                    <option value="medium" selected>M</option>
+                    <option value="large">L</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Enviar">
@@ -41,33 +51,26 @@
     </div>
 
     <!-- NO modificar a partir de aquí -->
-    <div class="container">
-        <form action="https://request-data.onrender.com/register-tshirthttps://request-data.onrender.com/register-tshirt" method="post" class="form" id="shirt-form">
-            <div class="form-group">
-                <label for="words">Texto (máximo 15 caracteres):</label>
-                <input type="text" id="words" name="words" maxlength="15" required>
-            </div>
+    <div class="shirt" id="shirt">
+        <div>
+            <img style="width:100%" src="t-shirt.png" alt="">
+            <span class="shirt-text"></span>
+        </div>
+    </div>
+    </div>
 
-                <div class="shirt" id="shirt">
-                    <div>
-                        <img style="width:100%" src="t-shirt.png" alt="">
-                        <span class="shirt-text"></span>
-                    </div>
-                </div>
-            </div>
+    <script>
+        document.getElementById('shirt-form').addEventListener('input', function () {
+            var text = document.getElementById('words').value;
+            var color = document.getElementById('color');
 
-            <script>
-                document.getElementById('shirt-form').addEventListener('input', function () {
-                    var text = document.getElementById('words').value;
-                    var color = document.getElementById('color');
+            var shirt = document.getElementById('shirt');
+            var shirtText = shirt.querySelector('.shirt-text');
 
-                    var shirt = document.getElementById('shirt');
-                    var shirtText = shirt.querySelector('.shirt-text');
-
-                    shirtText.textContent = text;
-                    shirt.style.backgroundColor = color ? color.value : 'white';
-                });
-            </script>
+            shirtText.textContent = text;
+            shirt.style.backgroundColor = color ? color.value : 'white';
+        });
+    </script>
 </body>
 
 </html>
