selector de color

--- a/ejercicio-formulario/index.html
+++ b/ejercicio-formulario/index.html
@@ -37,13 +37,20 @@
 
             <!-- Selector de talla S, M , L -- -->
             <div class="form-group">
-                <label for="size"> Color preferido </label>
+                <label for="size"> Tamaño de la camiseta: </label>
                 <select id="size" name="size">
                     <option value="small">S</option>
                     <option value="medium" selected>M</option>
                     <option value="large">L</option>
                 </select>
             </div>
+
+             <!-- Selector de color -- -->
+             <div class="form-group">
+                <label for="color"> Color preferido: </label>
+                <input type="color" id="color" name="color" value="#ffffff">
+
+
             <div class="form-group">
                 <input type="submit" value="Enviar">
             </div>
