--- a/ejercicio-maquetacion/index.html
+++ b/ejercicio-maquetacion/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio de maquetacion</title>
     <style>
         * {
             box-sizing: border-box;
@@ -13,30 +13,40 @@
 </head>
 
 <body>
-    Básico
-    $ 9.99 / año
-    10GB de Almacenamiento
-    10 Correos Electrónicos
-    10 Dominios
-    1GB de Ancho de Banda
-    Registrarse
-    
-    Pro
-    $ 24.99 / año
-    25GB de Almacenamiento
-    25 Correos Electrónicos
-    25 Dominios
-    2GB de Ancho de Banda
-    Registrarse
-    
-    Premium
-    $ 49.99 / año
-    50GB de Almacenamiento
-    50 Correos Electrónicos
-    50 Dominios
-    5GB de Ancho de Banda
-    Registrarse
+    <section class="memberships">
+        <div call="plan">
+            <div class="plan-header-basic">Básico</div>
+            <div class="plan-price">$ 9.99 / año</div>
+            <ul class="plan-features">
+                <li>10GB de Almacenamiento</li>
+                <li>10 Correos Electrónicos</li>
+                <li>10 Dominios</li>
+                <li>1GB de Ancho de Banda</li>
+            </ul>
+            <button class="registrarse"> Registrarse</button>
+        </div>
+        <div call="plan">
+            <div class="plan-header-pro">Pro</div>
+            <div class="plan-price">$ 24.99 / año</div>
+            <ul class="plan-features">
+                <li>25GB de Almacenamiento</li>
+                <li>25 Correos Electrónicos</li>
+                <li>25 Dominios</li>
+                <li>2GB de Ancho de Banda</li>
+            </ul>
+            <button class="registrarse"> Registrarse</button>
+        </div>
+        <div call="plan">
+            <div class="plan-header-premium">Premium</div>
+            <div class="plan-price">$ 49.99 / año</div>
+            <ul class="plan-features">
+                <li>50GB de Almacenamiento</li>
+                <li>50 Correos Electrónicos</li>
+                <li>50 Dominios</li>
+                <li>5GB de Ancho de Banda</li>
+            </ul>
+            <button class="registrarse"> Registrarse</button>
+        </div>
+    </section>
 </body>
-
 </html>
-
